[package]
name = "danmu2ass"
version = "1.0.1"
edition = "2021"
authors = ["gwy15 <gwy15thu@gmail.com>"]
description = "哔哩哔哩的 xml 文件转化为 ass 文件"
license = "MIT"
homepage = "https://github.com/gwy15/danmu2ass"
repository = "https://github.com/gwy15/danmu2ass"
documentation = "https://docs.rs/danmu2ass/"

[dependencies]
anyhow = "1.0.56"
float-ord = "0.3.2"
serde = { version = "1.0.136", features = ["derive"] }
log = "0.4.15"
memchr = "2.5.0"
prost = "0.12.4"
serde_json = "1.0.79"
